-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: jfx15
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8256962 | jfx11.0.10 | Kevin Rushforth | P4 | Resolved | Fixed | |
| JDK-8253370 | 8u281 | Kevin Rushforth | P4 | Resolved | Fixed | b02 |
The jfx `.jcheck/conf` file is configured to check the same set of files as the old HG jcheck, namely files with the following extensions:
.java, .c, .h, .cpp, and .hpp
The Skara git jcheck alows us to evolve the rules for white space checking compatibly.
I propose to add the following additional file extensions to the list of source files that need to be kept whitespace-clean:
.cc, .css, .frag, .fxml, .g4, .gradle, .groovy, .hlsl, .jsl, .m, .metal, .mm, .stg, .vert
Many of these are optionally checked by the tools/scripts/checkWhiteSpace tool, which has an extended mode (-E) that adds most of the above. However, since it isn't the default, which was chosen to match jcheck, whitespace issues have crept in.
We should fix these error, and at the same time, modify the .jcheck/conf script so they don't sneak back in.
I ran the tool on all files in the repo, and found the following files that need to be fixed:
build.gradle :trailingWhitespace:
buildSrc/android.gradle :trailingWhitespace:
buildSrc/win.gradle :tabs:
modules/javafx.graphics/src/jslc/antlr/com/sun/scenario/effect/compiler/JSL.g4 :tabs:
modules/javafx.graphics/src/jslc/resources/com/sun/scenario/effect/compiler/backend/prism/PrismGlue.stg :trailingWhitespace:
modules/javafx.graphics/src/jslc/resources/com/sun/scenario/effect/compiler/backend/sw/java/JSWGlue.stg :trailingWhitespace:
modules/javafx.graphics/src/jslc/resources/com/sun/scenario/effect/compiler/backend/sw/me/MEJavaGlue.stg :trailingWhitespace:
modules/javafx.graphics/src/jslc/resources/com/sun/scenario/effect/compiler/backend/sw/sse/SSEJavaGlue.stg :trailingWhitespace:
modules/javafx.graphics/src/main/native-glass/mac/GlassViewDelegate.m :trailingWhitespace:
modules/javafx.graphics/src/main/resources/com/sun/prism/es2/glsl/diffuse_texture.frag :trailingWhitespace:
modules/javafx.graphics/src/main/resources/com/sun/prism/es2/glsl/main.vert :trailingWhitespace:
modules/javafx.web/src/main/native/Source/JavaScriptCore/runtime/BundlePath.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/BlockObjCExceptions.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/FileSystemCocoa.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/MainThreadCocoa.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/MemoryPressureHandlerCocoa.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/NSURLExtras.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/URLCocoa.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/mediacontrols/mediaControlsApple.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/mediacontrols/mediaControlsBase.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/mediacontrols/mediaControlsiOS.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/modern-media-controls/controls/compact-activity-indicator.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/modern-media-controls/controls/compact-media-controls.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/modern-media-controls/controls/media-controls.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/modern-media-controls/controls/slider.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/plugins/QuickTimePluginReplacement.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/plugins/QuickTimePluginReplacement.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/html.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/mediaControls.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/mediaControlsiOS.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/svg.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/themeWin.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/themeWinQuirks.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/dom/DataTransferMac.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/platform/graphics/cv/ImageTransferSessionVT.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/platform/graphics/cv/TextureCacheCV.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/rendering/RenderThemeIOS.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/rendering/RenderThemeMac.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/bmalloc/bmalloc/ProcessCheck.mm :trailingWhitespace:
.java, .c, .h, .cpp, and .hpp
The Skara git jcheck alows us to evolve the rules for white space checking compatibly.
I propose to add the following additional file extensions to the list of source files that need to be kept whitespace-clean:
.cc, .css, .frag, .fxml, .g4, .gradle, .groovy, .hlsl, .jsl, .m, .metal, .mm, .stg, .vert
Many of these are optionally checked by the tools/scripts/checkWhiteSpace tool, which has an extended mode (-E) that adds most of the above. However, since it isn't the default, which was chosen to match jcheck, whitespace issues have crept in.
We should fix these error, and at the same time, modify the .jcheck/conf script so they don't sneak back in.
I ran the tool on all files in the repo, and found the following files that need to be fixed:
build.gradle :trailingWhitespace:
buildSrc/android.gradle :trailingWhitespace:
buildSrc/win.gradle :tabs:
modules/javafx.graphics/src/jslc/antlr/com/sun/scenario/effect/compiler/JSL.g4 :tabs:
modules/javafx.graphics/src/jslc/resources/com/sun/scenario/effect/compiler/backend/prism/PrismGlue.stg :trailingWhitespace:
modules/javafx.graphics/src/jslc/resources/com/sun/scenario/effect/compiler/backend/sw/java/JSWGlue.stg :trailingWhitespace:
modules/javafx.graphics/src/jslc/resources/com/sun/scenario/effect/compiler/backend/sw/me/MEJavaGlue.stg :trailingWhitespace:
modules/javafx.graphics/src/jslc/resources/com/sun/scenario/effect/compiler/backend/sw/sse/SSEJavaGlue.stg :trailingWhitespace:
modules/javafx.graphics/src/main/native-glass/mac/GlassViewDelegate.m :trailingWhitespace:
modules/javafx.graphics/src/main/resources/com/sun/prism/es2/glsl/diffuse_texture.frag :trailingWhitespace:
modules/javafx.graphics/src/main/resources/com/sun/prism/es2/glsl/main.vert :trailingWhitespace:
modules/javafx.web/src/main/native/Source/JavaScriptCore/runtime/BundlePath.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/BlockObjCExceptions.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/FileSystemCocoa.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/MainThreadCocoa.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/MemoryPressureHandlerCocoa.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/NSURLExtras.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/URLCocoa.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/mediacontrols/mediaControlsApple.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/mediacontrols/mediaControlsBase.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/mediacontrols/mediaControlsiOS.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/modern-media-controls/controls/compact-activity-indicator.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/modern-media-controls/controls/compact-media-controls.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/modern-media-controls/controls/media-controls.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/modern-media-controls/controls/slider.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/plugins/QuickTimePluginReplacement.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/Modules/plugins/QuickTimePluginReplacement.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/html.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/mediaControls.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/mediaControlsiOS.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/svg.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/themeWin.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/css/themeWinQuirks.css :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/dom/DataTransferMac.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/platform/graphics/cv/ImageTransferSessionVT.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/platform/graphics/cv/TextureCacheCV.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/rendering/RenderThemeIOS.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/WebCore/rendering/RenderThemeMac.mm :trailingWhitespace:
modules/javafx.web/src/main/native/Source/bmalloc/bmalloc/ProcessCheck.mm :trailingWhitespace:
- backported by
-
JDK-8253370 Enforce whitespace checking for additional source files
-
- Resolved
-
-
JDK-8256962 Enforce whitespace checking for additional source files
-
- Resolved
-
- relates to
-
JDK-8281422 Enforce whitespace checking for additional source files
-
- Open
-
-
JDK-8378381 Enforce whitespace checking for more source files
-
- Open
-
-
JDK-8253206 Enforce whitespace checking for additional source files
-
- Resolved
-
-
JDK-8240487 Cleanup whitespace in .cc, .hh, .m, and .mm files
-
- Resolved
-
(1 relates to, 2 links to)