8240499: Enforce whitespace checking for additional source files

Part 2: Fix files as of 2020-09-11