modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/NSURLExtras.mm
@@ -6,13 +6,13 @@
  * are met:
  *
  * 1.  Redistributions of source code must retain the above copyright
- *     notice, this list of conditions and the following disclaimer. 
+ *     notice, this list of conditions and the following disclaimer.
  * 2.  Redistributions in binary form must reproduce the above copyright
  *     notice, this list of conditions and the following disclaimer in the
- *     documentation and/or other materials provided with the distribution. 
+ *     documentation and/or other materials provided with the distribution.
  * 3.  Neither the name of Apple Inc. ("Apple") nor the names of
  *     its contributors may be used to endorse or promote products derived
- *     from this software without specific prior written permission. 
+ *     from this software without specific prior written permission.
  *
  * THIS SOFTWARE IS PROVIDED BY APPLE AND ITS CONTRIBUTORS "AS IS" AND ANY
  * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
@@ -51,20 +51,20 @@ static BOOL readIDNScriptWhiteListFile(NSString *filename)
     FILE *file = fopen([filename fileSystemRepresentation], "r");
     if (!file)
         return NO;
-    
+
     // Read a word at a time.
     // Allow comments, starting with # character to the end of the line.
     while (1) {
         // Skip a comment if present.
         if (fscanf(file, " #%*[^\n\r]%*[\n\r]") == EOF)
             break;
-        
+
         // Read a script name if present.
         char word[33];
         int result = fscanf(file, " %32[^# \t\n\r]%*[^# \t\n\r] ", word);
         if (result == EOF)
             break;
-        
+
         if (result == 1) {
             // Got a word, map to script code and put it into the array.
             whiteListIDNScript(word);
@@ -92,7 +92,7 @@ void loadIDNScriptWhiteList()
 }
 
 } // namespace URLHelpers
-    
+
 static String decodePercentEscapes(const String& string)
 {
     NSString *substring = (NSString *)string;
@@ -131,7 +131,7 @@ NSURL *URLByTruncatingOneCharacterBeforeComponent(NSURL *URL, CFURLComponentType
 {
     if (!URL)
         return nil;
-    
+
     CFRange fragRg = CFURLGetByteRangeForComponent((__bridge CFURLRef)URL, component, nullptr);
     if (fragRg.location == kCFNotFound)
         return URL;
@@ -147,7 +147,7 @@ NSURL *URLByTruncatingOneCharacterBeforeComponent(NSURL *URL, CFURLComponentType
     CFURLRef result = CFURLCreateWithBytes(nullptr, urlBytes.data(), fragRg.location - 1, kCFStringEncodingUTF8, nullptr);
     if (!result)
         result = CFURLCreateWithBytes(nullptr, urlBytes.data(), fragRg.location - 1, kCFStringEncodingISOLatin1, nullptr);
-        
+
     return result ? CFBridgingRelease(result) : URL;
 }
 
@@ -160,19 +160,19 @@ NSURL *URLWithData(NSData *data, NSURL *baseURL)
 {
     if (!data)
         return nil;
-    
+
     NSURL *result = nil;
     size_t length = [data length];
     if (length > 0) {
         // work around <rdar://4470771>: CFURLCreateAbsoluteURLWithBytes(.., TRUE) doesn't remove non-path components.
         baseURL = URLByRemovingResourceSpecifier(baseURL);
-        
+
         const UInt8 *bytes = static_cast<const UInt8*>([data bytes]);
-        
+
         // CFURLCreateAbsoluteURLWithBytes would complain to console if we passed a path to it.
         if (bytes[0] == '/' && !baseURL)
             return nil;
-        
+
         // NOTE: We use UTF-8 here since this encoding is used when computing strings when returning URL components
         // (e.g calls to NSURL -path). However, this function is not tolerant of illegal UTF-8 sequences, which
         // could either be a malformed string or bytes in a different encoding, like shift-jis, so we fall back
@@ -189,7 +189,7 @@ static NSData *dataWithUserTypedString(NSString *string)
 {
     NSData *userTypedData = [string dataUsingEncoding:NSUTF8StringEncoding];
     ASSERT(userTypedData);
-    
+
     const UInt8* inBytes = static_cast<const UInt8 *>([userTypedData bytes]);
     int inLength = [userTypedData length];
     if (!inLength)
@@ -199,7 +199,7 @@ static NSData *dataWithUserTypedString(NSString *string)
     mallocLength *= 3; // large enough to %-escape every character
     if (mallocLength.hasOverflowed())
         return nil;
-    
+
     char* outBytes = static_cast<char *>(malloc(mallocLength.unsafeGet()));
     char* p = outBytes;
     int outLength = 0;
@@ -215,7 +215,7 @@ static NSData *dataWithUserTypedString(NSString *string)
             outLength++;
         }
     }
-    
+
     return [NSData dataWithBytesNoCopy:outBytes length:outLength]; // adopts outBytes
 }
 
@@ -277,7 +277,7 @@ NSData *dataForURLComponentType(NSURL *URL, CFURLComponentType componentType)
         allBytesBuffer.grow(bytesToAllocate);
         bytesFilled = CFURLGetBytes((__bridge CFURLRef)URL, allBytesBuffer.data(), bytesToAllocate);
     }
-    
+
     const CFURLComponentType completeURL = (CFURLComponentType)-1;
     CFRange range;
     if (componentType != completeURL) {
@@ -288,16 +288,16 @@ NSData *dataForURLComponentType(NSURL *URL, CFURLComponentType componentType)
         range.location = 0;
         range.length = bytesFilled;
     }
-    
-    NSData *componentData = [NSData dataWithBytes:allBytesBuffer.data() + range.location length:range.length]; 
-    
+
+    NSData *componentData = [NSData dataWithBytes:allBytesBuffer.data() + range.location length:range.length];
+
     const unsigned char *bytes = static_cast<const unsigned char *>([componentData bytes]);
     NSMutableData *resultData = [NSMutableData data];
     // NOTE: add leading '?' to query strings non-zero length query strings.
     // NOTE: retain question-mark only query strings.
     if (componentType == kCFURLComponentQuery) {
         if (range.length > 0 || hasQuestionMarkOnlyQueryString(URL))
-            [resultData appendBytes:"?" length:1];    
+            [resultData appendBytes:"?" length:1];
     }
     for (int i = 0; i < range.length; i++) {
         unsigned char c = bytes[i];
@@ -306,14 +306,14 @@ NSData *dataForURLComponentType(NSURL *URL, CFURLComponentType componentType)
             escaped[0] = '%';
             escaped[1] = upperNibbleToASCIIHexDigit(c);
             escaped[2] = lowerNibbleToASCIIHexDigit(c);
-            [resultData appendBytes:escaped length:3];    
+            [resultData appendBytes:escaped length:3];
         } else {
             char b[1];
             b[0] = c;
-            [resultData appendBytes:b length:1];    
-        }               
+            [resultData appendBytes:b length:1];
+        }
     }
-    
+
     return resultData;
 }
 
@@ -322,7 +322,7 @@ static NSURL *URLByRemovingComponentAndSubsequentCharacter(NSURL *URL, CFURLComp
     CFRange range = CFURLGetByteRangeForComponent((__bridge CFURLRef)URL, component, 0);
     if (range.location == kCFNotFound)
         return URL;
-    
+
     // Remove one subsequent character.
     range.length++;
 
@@ -334,18 +334,18 @@ static NSURL *URLByRemovingComponentAndSubsequentCharacter(NSURL *URL, CFURLComp
         CFURLGetBytes((__bridge CFURLRef)URL, buffer.data(), numBytes);
     }
     UInt8* urlBytes = buffer.data();
-        
+
     if (numBytes < range.location)
         return URL;
     if (numBytes < range.location + range.length)
         range.length = numBytes - range.location;
-        
+
     memmove(urlBytes + range.location, urlBytes + range.location + range.length, numBytes - range.location + range.length);
-    
+
     CFURLRef result = CFURLCreateWithBytes(nullptr, urlBytes, numBytes - range.length, kCFStringEncodingUTF8, nullptr);
     if (!result)
         result = CFURLCreateWithBytes(nullptr, urlBytes, numBytes - range.length, kCFStringEncodingISOLatin1, nullptr);
-                
+
     return result ? CFBridgingRelease(result) : URL;
 }
 
@@ -364,10 +364,10 @@ NSData *originalURLData(NSURL *URL)
         bytesFilled = CFURLGetBytes((__bridge CFURLRef)URL, buffer, bytesToAllocate);
         ASSERT(bytesFilled == bytesToAllocate);
     }
-    
+
     // buffer is adopted by the NSData
     NSData *data = [NSData dataWithBytesNoCopy:buffer length:bytesFilled freeWhenDone:YES];
-    
+
     NSURL *baseURL = (__bridge NSURL *)CFURLGetBaseURL((__bridge CFURLRef)URL);
     if (baseURL)
         return originalURLData(URLWithData(data, baseURL));
@@ -385,14 +385,14 @@ BOOL isUserVisibleURL(NSString *string)
 {
     BOOL valid = YES;
     // get buffer
-    
+
     char static_buffer[1024];
     const char *p;
     BOOL success = CFStringGetCString((__bridge CFStringRef)string, static_buffer, 1023, kCFStringEncodingUTF8);
     p = success ? static_buffer : [string UTF8String];
-    
+
     int length = strlen(p);
-    
+
     // check for characters <= 0x20 or >=0x7f, %-escape sequences of %7f, and xn--, these
     // are the things that will lead _web_userVisibleString to actually change things.
     for (int i = 0; i < length; i++) {
@@ -416,7 +416,7 @@ BOOL isUserVisibleURL(NSString *string)
             }
         }
     }
-    
+
     return valid;
 }
 
